fixed the routing issue. The about me background color is cutting off. need to fix.

--- a/src/styles/AboutMe.css
+++ b/src/styles/AboutMe.css
@@ -1,3 +1,8 @@
 .abtMe {
     margin-top: 50px;
 }
+
+.paragraph {
+    margin-left: 50px;
+    margin-right: 50px;
+}
